--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
 }
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 0;
+  padding: 9.6rem;
 }
 .hero {
   max-width: 130rem;
@@ -66,4 +66,33 @@ body {
 }
 .margin-right {
   margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+  display: flex;
+  margin-top: 8rem;
+  gap: 1.6rem;
+  align-items: center;
+}
+.delivered-img {
+  display: flex;
+}
+.delivered-img img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 1px solid #fdf2e9;
+}
+.delivered-img img:last-child {
+  margin: 0;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin-left: 1.9rem;
+}
+.delivered-text span {
+  font-weight: bold;
+  color: #cf711f;
 }
