--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
 }
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem;
+  padding: 9.6rem 9.4rem;
 }
 .hero {
   max-width: 130rem;
