--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,13 +10,61 @@ body {
   font-weight: 600;
   color: #555;
 }
+
+/* *************** */
+/* HEADER SECTION */
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #555;
+  font-size: 1.8rem;
+  font-weight: 700;
+  transition: all 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+.nav-cta:link,
+.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+.nav-cta:hover,
+.nav-cta:active {
+  background-color: #cf711f;
+}
+/* ************ */
+/* HERO SECTION */
+/* ************ */
+
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 9.4rem;
+  padding: 4.8rem 9.6rem 9.4rem;
 }
 .hero {
   max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -24,6 +72,7 @@ body {
 .hero-img {
   width: 100%;
 }
+
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
