--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,10 +151,11 @@ body {
 .section-how {
   padding: 9.6rem 0;
 }
-/* .section-how div {
+.section-how div {
   padding: 100px;
   font-size: 50px;
 }
+/* 
 .grid {
   display: grid;
   gap: 9.6rem;
