--- a/CSS/style.css
+++ b/CSS/style.css
@@ -170,9 +170,10 @@ body {
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* .section-how div:nth-child(1) {
+.section-how div:nth-child(1) {
   background-color: blue;
 }
+/* 
 .section-how div:nth-child(2) {
   background-color: rgb(208, 135, 25);
 }
