--- a/CSS/style.css
+++ b/CSS/style.css
@@ -177,10 +177,10 @@ body {
 .section-how div:nth-child(2) {
   background-color: rgb(208, 135, 25);
 }
-/* 
+
 .section-how div:nth-child(3) {
   background-color: rgb(83, 9, 9);
 }
 .section-how div:nth-child(4) {
   background-color: rgb(18, 219, 95);
-} */
+}
