--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,10 +151,10 @@ body {
 .section-how {
   padding: 9.6rem 0;
 }
-.section-how div {
+/* .section-how div {
   padding: 100px;
   font-size: 50px;
-}
+} */
 
 .grid {
   display: grid;
@@ -168,6 +168,27 @@ body {
 
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
+}
+.step-img {
+  width: 50%;
+}
+.subheading {
+  display: block;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
+.heading-secondary {
+  line-height: 1.2;
+  color: #333;
+  color: #45260a;
+  color: #343a40;
+  letter-spacing: -0.5px;
+  font-size: 4.4rem;
+  margin-bottom: 9.6rem;
 }
 /* 
 .section-how div:nth-child(1) {
