--- a/CSS/style.css
+++ b/CSS/style.css
@@ -185,7 +185,7 @@ body {
   line-height: 1.2;
   color: #333;
   color: #45260a;
-  color: #343a40;
+  /* color: #343a40; */
   letter-spacing: -0.5px;
   font-size: 4.4rem;
   margin-bottom: 9.6rem;
