--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,7 +184,7 @@ body {
 .heading-secondary {
   line-height: 1.2;
   color: #333;
-  color: #45260a;
+  /* color: #45260a; */
   /* color: #343a40; */
   letter-spacing: -0.5px;
   font-size: 4.4rem;
