--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,7 +158,9 @@ body {
 
 .grid {
   display: grid;
-  gap: 9.6rem;
+  /* gap: 9.6rem; */
+  row-gap: 9.6rem;
+  column-gap: 9.6rem;
 }
 .container {
   max-width: 120rem;
@@ -169,8 +171,41 @@ body {
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
-.step-img {
+.grid--center-v {
+  align-items: center;
+}
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+/* .step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  z-index: -1;
+}
+.step-img-box::before {
+  width: 60%;
+  background-color: #fdf2e9;
+  padding-bottom: 60%;
+  position: absolute;
+}
+.step-img-box::after {
   width: 50%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+  position: absolute;
+}
+.step-img {
+  width: 33%;
 }
 .subheading {
   display: block;
@@ -190,6 +225,23 @@ body {
   font-size: 4.4rem;
   margin-bottom: 9.6rem;
 }
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 700;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+.heading-tertiary {
+  font-weight: 700;
+  font-size: 3rem;
+  color: #333;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+.step-description {
+  line-height: 1.8;
+  font-size: 1.8rem;
+} */
 /* 
 .section-how div:nth-child(1) {
   background-color: blue;
@@ -204,4 +256,28 @@ body {
 }
 .section-how div:nth-child(4) {
   background-color: rgb(18, 219, 95);
+} */
+/* **************** */
+
+/* *************** */
+/* .section-featured {
+  padding: 4.8rem 0;
+}
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
 } */
