--- a/CSS/style.css
+++ b/CSS/style.css
@@ -227,7 +227,6 @@ body {
   font-size: 4.4rem;
   margin-bottom: 9.6rem;
 }
-/*
 
 .step-number {
   font-size: 8.6rem;
@@ -245,7 +244,7 @@ body {
 .step-description {
   line-height: 1.8;
   font-size: 1.8rem;
-} */
+}
 /* 
 .section-how div:nth-child(1) {
   background-color: blue;
