--- a/CSS/style.css
+++ b/CSS/style.css
@@ -263,7 +263,7 @@ body {
 /* **************** */
 
 /* *************** */
-/* .section-featured {
+.section-featured {
   padding: 4.8rem 0;
 }
 .heading-featured-in {
@@ -275,6 +275,7 @@ body {
   margin-bottom: 2.4rem;
   color: #888;
 }
+/*
 .logos {
   display: flex;
   justify-content: space-around;
