--- a/CSS/style.css
+++ b/CSS/style.css
@@ -275,7 +275,6 @@ body {
   margin-bottom: 2.4rem;
   color: #888;
 }
-/*
 .logos {
   display: flex;
   justify-content: space-around;
@@ -284,4 +283,4 @@ body {
   height: 3.2rem;
   filter: brightness(0);
   opacity: 50%;
-} */
+}
