--- a/CSS/style.css
+++ b/CSS/style.css
@@ -145,17 +145,13 @@ body {
   font-weight: bold;
   color: #cf711f;
 }
+
 /* ******************* */
 /*how it's work section */
 
 .section-how {
   padding: 9.6rem 0;
 }
-/* .section-how div {
-  padding: 100px;
-  font-size: 50px;
-} */
-
 .grid {
   display: grid;
   /* gap: 9.6rem; */
@@ -170,6 +166,9 @@ body {
 
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
+}
+.grid-3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
 .grid--center-v {
   align-items: center;
@@ -260,8 +259,9 @@ body {
 .section-how div:nth-child(4) {
   background-color: rgb(18, 219, 95);
 } */
-/* **************** */
 
+/* **************** */
+/* section feature */
 /* *************** */
 .section-featured {
   padding: 4.8rem 0;
@@ -283,4 +283,72 @@ body {
   height: 3.2rem;
   filter: brightness(0);
   opacity: 50%;
+}
+
+/* ********************* */
+/* section meals */
+
+/* ************* */
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem;
+}
+.meal-title {
+  font-size: 2rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 3.2rem;
+}
+.meal-img {
+  width: 100%;
+}
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+strong {
+  font-weight: 500;
+}
+.tag {
+  /* margin-top: 1rem;/ */
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background-color: #51cf66;
+  color: #333;
+  border-radius: 100px;
+  font-weight: bold;
+}
+.tag-vegan {
+  background-color: #94d82d;
+}
+.tag-peleo {
+  background-color: #ffd43b;
+}
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
 }
