--- a/CSS/style.css
+++ b/CSS/style.css
@@ -415,7 +415,7 @@ strong {
 }
 .testimonial {
 }
-/* 
+
 .testimonial-img {
   width: 6.4rem;
   border-radius: 50%;
@@ -429,4 +429,4 @@ strong {
 .testimonial-name {
   font-size: 1.6rem;
   color: #777;
-} */
+}
