--- a/CSS/style.css
+++ b/CSS/style.css
@@ -404,14 +404,23 @@ strong {
 /* Testimonial-section */
 
 /* *************** */
-
+/* 
 .section-testimonials {
-  padding: 9.6rem 0;
+  background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
 }
+
+.testimonial-container {
+  padding: 9.6rem;
+} */
+
 .testimonials {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 4.8rem;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
 }
 .testimonial-img {
   width: 6.4rem;
@@ -422,8 +431,28 @@ strong {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 1.6rem;
+  color: #6f6f6f;
 }
 .testimonial-name {
   font-size: 1.6rem;
   color: #777;
 }
+/* 
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+.gallery-item {
+  overflow: hidden;
+}
+
+.gallery-item img {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+.gallery-item img:hover {
+  transform: scale(1.1);
+} */
