--- a/CSS/style.css
+++ b/CSS/style.css
@@ -404,7 +404,7 @@ strong {
 /* Testimonial-section */
 
 /* *************** */
-/* 
+
 .section-testimonials {
   background-color: #fdf2e9;
   display: grid;
@@ -414,7 +414,7 @@ strong {
 
 .testimonial-container {
   padding: 9.6rem;
-} */
+}
 
 .testimonials {
   display: grid;
