--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,6 +85,7 @@ body {
   line-height: 1.6;
   margin-bottom: 4.8rem;
 }
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -93,6 +94,8 @@ body {
   border-radius: 16px;
   text-decoration: none;
   transition: background-color 1s;
+  cursor: pointer;
+  border: none;
 }
 .btn-outline:visited,
 .btn-outline:link {
@@ -158,6 +161,12 @@ body {
   row-gap: 9.6rem;
   column-gap: 9.6rem;
 }
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
 .container {
   max-width: 120rem;
   margin: 0 auto;
@@ -427,6 +436,11 @@ strong {
   border-radius: 50%;
   margin-bottom: 1.3rem;
 }
+/* .testimonial-img:first-of-type(2) {
+  width: 6.4rem;
+  border-radius: 75%;
+  margin-bottom: 1.3rem;
+} */
 .testimonial-text {
   font-size: 1.8rem;
   line-height: 1.8;
@@ -455,4 +469,197 @@ strong {
 }
 .gallery-item img:hover {
   transform: scale(1.1);
+}
+
+/* ************* */
+
+/* SECTION-PRICING */
+
+/* ************* */
+
+.section-pricing {
+  padding: 9.6rem;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.pricing-plane {
+  border-radius: 10px;
+  width: 75%;
+}
+.princing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+.princing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  overflow: hidden;
+  position: relative;
+}
+.princing-plan--complete::after {
+  content: "Best Value";
+  position: absolute;
+  top: 6%;
+  right: -18%;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  background-color: #ffd43b;
+  color: #333;
+  padding: 0.8rem 8rem;
+  border-radius: 8px;
+  transform: rotate(45deg);
+}
+.plan-name {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #cf711f;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  font-size: 6.4rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+.plan-sing-up {
+  text-align: center;
+  margin-top: 4.8rem;
+}
+
+.container {
+}
+.grid {
+}
+.grid--4-cols {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+.feature {
+}
+.feature-icon {
+  color: #e67e22;
+  width: 3.2rem;
+  height: 3.2rem;
+  margin-bottom: 3.2rem;
+  background-color: #fdf2e9;
+  border-radius: 50%;
+  padding: 1.6rem;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+/* ************* */
+
+/* SECTION-CTA*/
+
+/* ************* */
+
+.section-cta {
+  padding: 9.6rem;
+}
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.16);
+  border-radius: 11px;
+  overflow: hidden;
+  background-image: linear-gradient(to right bottom, #e67e22, #eb984e);
+}
+.cta .heading-secondary {
+  color: #45260a;
+  /* padding: 6.4rem; */
+  margin-bottom: 3.2rem;
+}
+.cta-text-box {
+  color: #45260a;
+  padding: 4.8rem 6.4rem 6.4rem;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(230, 125, 34, 0.35),
+      rgba(235, 151, 78, 0.35)
+    ),
+    url("../images/eating.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+.btn--form:hover {
+  background-color: #ddd;
+  color: #555;
+}
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
