--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,8 +17,11 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: #fdf2e9;
+  opacity: 0.8;
   height: 9.6rem;
   padding: 1rem 4.8rem;
+  position: sticky;
+  top: 0;
 }
 .logo {
   height: 2.2rem;
@@ -587,7 +590,7 @@ strong {
 /* ************* */
 
 .section-cta {
-  padding: 9.6rem;
+  padding: 4.8rem 0 9.6rem 0;
 }
 .cta {
   display: grid;
@@ -662,4 +665,72 @@ strong {
 .cta *:focus {
   outline: none;
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/* ************* */
+
+/* FOOTER*/
+
+/* ************* */
+
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px solid #ddd;
+}
+.footer-logo {
+  display: block;
+  margin-bottom: 2rem;
+}
+.grid--footer {
+  display: grid;
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  line-height: 1.6;
+}
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin-bottom: 4rem;
+}
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
+}
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+.address-link {
+  margin-bottom: 3.2rem;
 }
