--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,8 +20,8 @@ body {
   opacity: 0.8;
   height: 9.6rem;
   padding: 1rem 4.8rem;
-  position: sticky;
-  top: 0;
+  /* position: sticky;
+  top: 0; */
 }
 .logo {
   height: 2.2rem;
@@ -549,15 +549,13 @@ strong {
 
 .container {
 }
-.grid {
-}
+
 .grid--4-cols {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
 }
-.feature {
-}
+
 .feature-icon {
   color: #e67e22;
   width: 3.2rem;
